<resources>
    <string name="toolbar_title">New York Times Search</string>
    <string name="menue_icon_name">Search Menu</string>
    <string name="search_by">Search by</string>
    <string name="art">Art</string>
    <string name="fashion_and_style">Fashion &amp;  Style</string>
    <string name="sports">Sports</string>
    <string name="date">Date</string>
    <string name="title_activity_movie_detail">Second page</string>
    <string name="apply">APPLY</string>
    <string name="cancel">Cancel</string>

    <string-array name="orders">
    <item>Newest Item</item>
    <item>Oldest Item</item>
    </string-array>



    <!--<string name="app_name">NYTimes</string>-->
    <!--<string name="menu_search">Search</string>-->
    <!--<string name="apikey">313d4b677a7b4d6a846c6fc4b8debac2</string>-->
    <!--<string name="sort_order">Sort By</string>-->
    <!--<string name="fitler">Filter</string>-->
    <!--<string name="arts">Arts</string>-->
    <!--<string name="fashion">Fashion &amp; Style</string>-->
    <!--<string name="sports">Sports</string>-->
    <!--<string name="apply">APPLY</string>-->
    <!--<string name="cancel">CANCEL</string>-->
    <!--<string name="share">Share</string>-->
    <!--<string name="begin_date">Begin Date:</string>-->


</resources>
