<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_margin="26dp"
    android:background="#ffcc99"
    android:layout_height="match_parent">


<!--relative layout for art-->
    <RelativeLayout
        android:id="@+id/relative_art_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="#cc9766"
        android:orientation="horizontal"
        android:weightSum="1">

        <ImageView
            android:id="@+id/imageView_art"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:srcCompat="@drawable/icon_art" />

        <TextView
            android:id="@+id/tv_art"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_toRightOf="@id/imageView_art"
            android:text="@string/art"
            android:textColor="#660033"
            android:textSize="26sp" />

        <CheckBox
            android:id="@+id/checkbox_art"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="136dp"
            android:layout_marginTop="16dp"
            android:layout_toRightOf="@id/tv_art" />


    </RelativeLayout>

    <!--relative layout for fashion and art-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:id="@+id/relative_fashion_and_style_container"
        android:layout_height="wrap_content"
        android:background="#cc9766"
        android:layout_marginBottom="16dp"
        android:weightSum="1">

        <ImageView
            android:id="@+id/imageView_fashion_and_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:srcCompat="@drawable/icon_fas" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:id="@+id/tv_fashion_and_style"
            android:layout_toRightOf="@id/imageView_fashion_and_style"
            android:textSize="22sp"
            android:textColor="#660033"
            android:text="@string/fashion_and_style"/>

        <CheckBox
            android:id="@+id/checkbpx_fashion_and_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="56dp"
            android:layout_toRightOf="@id/tv_fashion_and_style"
            android:layout_marginTop="16dp"
            />


        </RelativeLayout>

    <!--relative layout for soprts-->

    <RelativeLayout
        android:id="@+id/relative_sport_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="#cc9766"
        android:orientation="horizontal"
        android:weightSum="1">

        <ImageView
            android:id="@+id/imageView_sport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:srcCompat="@drawable/icon_sport" />

        <TextView
            android:id="@+id/tv_sport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_toRightOf="@id/imageView_sport"
            android:text="@string/sports"
            android:textColor="#660033"
            android:textSize="26sp" />

        <CheckBox
            android:id="@+id/checkbpx_sport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="96dp"
            android:layout_marginTop="16dp"
            android:layout_toRightOf="@id/tv_sport" />


    </RelativeLayout>

    <Spinner
        style="@style/Widget.AppCompat.Light.DropDownItem.Spinner"
        android:id="@+id/filter_sort_order"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:entries="@array/orders"/>


    <!--Date-->

    <RelativeLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:id="@+id/relative_date_container"
        android:layout_height="wrap_content"
        android:background="#cc9766"
        android:layout_marginBottom="16dp"
        android:weightSum="1">

        <ImageView
            android:id="@+id/imageView_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:srcCompat="@drawable/icon_calender" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:id="@+id/tv_date"
            android:textColor="#660033"
            android:layout_toRightOf="@id/imageView_date"
            android:textSize="26sp"
            android:text="@string/date"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:id="@+id/tv_date_format"
            android:layout_toRightOf="@id/tv_date"
            android:textSize="26sp"
            android:textColor="#800040"
            android:text="2017/3/27"/>


    </RelativeLayout>

    <View
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <LinearLayout
        android:id="@+id/linear_apply_cancel_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:orientation="horizontal">

        <Button
            android:id="@+id/filter_apply"
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/apply" />

        <Button
            android:id="@+id/filter_cancel"
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:textSize="20sp"
            android:text="@string/cancel" />
    </LinearLayout>


</LinearLayout>